would be good to centralize the SchemaDefaults
so that it is called after everything is mapped and checks all required fields then